# GMM_4_missing_data

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.agent/manim_skill-main/: .gitignore  README.md
docs/: scenes.md
latex_composition/: main.tex
latex_composition/sections/: experiments.tex  implementation.tex  methodology.tex
latex_report/: main.tex
latex_report/bib/: references.bib
latex_report/sections/: application.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  problem_setup.tex
latex_report/setting/: khang_paper.sty
latex_slides/: main.tex
latex_slides/figures/tikz/: algorithm_cycle.tikz  missingness_hook.tikz  precision_update_story.tikz  repo_pipeline.tikz  twostage_vs_onestage.tikz
latex_slides/sections/: 01_hook.tex  02_formulation.tex  03_algorithm.tex  04_implementation.tex  05_results.tex  06_takeaways.tex
latex_slides/sections/gmm/: 04_implementation.tex  06_takeaways.tex
latex_slides/settings/: commands.tex  packages.tex
notebooks/: GMM_Nhat.ipynb  airplane_crashes_gmm_imputation.ipynb  step_by_step_experiment.ipynb
src/: airplane_crashes_and_fatalities.md  airplane_crashes_pipeline.py  gmm_missing.py  utils.py
src/manim/: gmm_missing_animations.py
