[project]
name = "gmm-4-missing-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbstripout>=0.9.1",
    "scipy-stubs~=1.17.1",
    "datasets>=2.19.0",
    "matplotlib>=3.9.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
]
